# pirs

./: .gitignore  Cargo.toml  Makefile  PROJECT-STATE.md  README.md
.github/workflows/: ci.yml  release.yml
.pirs/profiles/: security-reviewer.rhai
.pirs/strategies/: plan-exec.rhai  plan-oracle-exec.rhai  wide-plan-exec.rhai
crates/pirs/: Cargo.toml
crates/pirs-agent/: Cargo.toml
crates/pirs-agent/src/: agent.rs  agent_loop.rs  compaction.rs  control_pins.rs  delegate.rs  events.rs  gate.rs  jobs.rs  lib.rs  steering.rs  strategy.rs  tool.rs  trace.rs  usage.rs  validate.rs
crates/pirs-ai/: Cargo.toml
crates/pirs-ai/src/: anthropic.rs  lib.rs  openai.rs  registry_file.rs  routing.rs  sse.rs
crates/pirs-ai/tests/: retry_test.rs  routing_live_smoke.rs  sse_utf8_test.rs
crates/pirs-bench/: README.md
crates/pirs-bench-runner/: Cargo.toml
crates/pirs-claw/: Cargo.toml
crates/pirs-claw/src/: channel.rs  duration_parse.rs  exec_env.rs  gateway.rs  instance_lock.rs  learn.rs  lib.rs  life_tools.rs  main.rs  memory_bridge.rs  pairing.rs  presets.rs  registry.rs  secrets.rs  session.rs  skill_tools.rs  skills.rs  voice.rs
crates/pirs-claw/tests/: cli_delivery.rs
crates/pirs-graph/: Cargo.toml
crates/pirs-lsp/: Cargo.toml
crates/pirs-rhai/: Cargo.toml
crates/pirs-tools/: Cargo.toml
crates/pirs-work/: Cargo.toml
crates/pirs-work/src/: lib.rs  main.rs
crates/pirs/src/: auth.rs  (+14 more)
docs/: HERMES-GAPS.md  PRODUCTS.md  ROADMAP.md  pirs-claw.md  pirs-work.md  shrimp-transfer.md  telegram-checklist.md
examples/extensions/: blame.rhai  rollback.rhai  word_count.rhai
extensions/: README.md  auto-checkpoint.rhai  browser-cdp-workflow.rhai  conductor.rhai  dirty-guard.rhai  mutation-guard.rhai  project-discipline.rhai  red-team.rhai  sandbox.rhai  session-discipline.rhai  skill-crystallizer.rhai  strict-plan.rhai  telemetry.rhai  weak-model.rhai
qa/: README.md  bench-swebench-5x5.md  cli-help.txt  clippy.txt  test-suite.txt
qa/bench-swebench-5x5/: rerun_monolithic_vs_naive.py  run_one.py  run_qwen_monolithic.py  run_qwen_monolithic_remaining.py
scripts/: install.sh  pirs-claw-telegram.service
(+190 files in other folders)
