[package]
name = "pirs-work"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin coding-work agent (Claude/Codex/Qoder/Kimi-class) over pirs"

[[bin]]
name = "pirs-work"
path = "src/main.rs"

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
pirs-tools = { workspace = true }
pirs-rhai = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# EnvFilter via workspace features

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
